# raytracing_n

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/workflows/: coverage.yml
benches/: bench.rs
raytracing_n/: all.html  index.html  sidebar-items.js
raytracing_n/angle/: fn.rem_euclidean.html  index.html  sidebar-items.js  struct.Angle.html
raytracing_n/direction/: index.html  sidebar-items.js  struct.Direction.html
raytracing_n/object/: enum.PlaneBuildingError.html  index.html  sidebar-items.js  struct.Camera.html  struct.HyperPlane.html  struct.OrientedOriginPlane.html  struct.OriginPlane.html  struct.OriginPlanePlaneWithOffset.html  struct.Plane.html  struct.Triangle.html  trait.Object.html  trait.Render.html
raytracing_n/space/: index.html  sidebar-items.js  struct.Space.html
raytracing_n/transformation/: index.html  sidebar-items.js  struct.Rotation.html  struct.Translation.html  trait.Transformable.html  trait.Transformation.html
raytracing_n/utils/: enum.ErrorSet.html  enum.Never.html  index.html  sidebar-items.js  struct.NonNegative.html  struct.Normed.html  struct.Positive.html  trait.Norm.html
raytracing_n/vector/: index.html  sidebar-items.js  struct.Vector.html
src/: direction.rs  lib.rs
src/angle/: mod.rs
src/object/: camera.rs  hyperplane.rs  mod.rs  plane.rs  triangle.rs
src/raytracing_n/: direction.rs.html  lib.rs.html  macro_def.rs.html
src/space/: mod.rs
src/test/: mod.rs  version_number.rs
src/transformation/: mod.rs
src/utils/: mod.rs  (+1 more)
(+70 files in other folders)
