[package]
name = "raytracing_n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde-serialize = ["serde", "serde_arrays"]
default = ["serde-serialize"]

[dependencies]
num-traits = "0.2.14"
rayon = "1.5.1"
crossbeam = "0.8.1"
serde = {version = "1.0", features = ["derive"], optional = true}
serde_arrays = {version = "0.1.0", optional = true}

[dev-dependencies]
criterion = "0.3.5"
version-sync = "0.9.4"

[[bench]]
name = "bench"
harness = false