[package]
name = "raytracing_n"
version = "0.1.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ABouttefeux/raytracing_n"
categories = ["Graphics", "Multimedia", "Rendering"]
keywords = ["raytracing"]
publish = true
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde-serialize = ["serde", "serde_arrays"]
default = ["serde-serialize"]

[dependencies]
num-traits = "0.2.15"
rayon = "1.5.3"
crossbeam = "0.8.1"
serde = {version = "1.0", features = ["derive"], optional = true}
serde_arrays = {version = "0.1.0", optional = true}

[dev-dependencies]
criterion = "0.4.0"
version-sync = "0.9.4"
approx = "0.5.1"

[[bench]]
name = "bench"
harness = false